z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,7 @@ img {
   margin: 0px 0px 0px 9px;
   text-transform: uppercase;
   transition: 0.3s background ease;
+  z-index: 1;
 }
 #findTrialButton:hover {
   background: #1BD9C4;
@@ -289,6 +290,7 @@ img {
   font-weight: 500;
   font-family: 'gilroylight';
   letter-spacing: 0px;
+  z-index: 1;
 }
 #postalCodeInput {
   height: 42px;
@@ -301,11 +303,13 @@ img {
   border: 0.05em solid #979797;
   border-radius: 21px;
   padding: 0px 0px 0px 25px;
+  z-index: 1;
 }
 .molecules {
   pointer-events: none;
   margin-top: -30%;
   margin-bottom: 1.5%;
+  z-index: 0;
 }
 .age-container {
   margin: 0 auto;
