--- a/less/index.less
+++ b/less/index.less
@@ -37,6 +37,7 @@
 .findTrialInputs {
 	display: flex;
 	padding: 45px 0px 0px 11px;	
+	
 }
 
 #findTrialButton {
@@ -56,6 +57,7 @@
 	margin: 0px 0px 0px 9px;
 	text-transform: uppercase;
 	transition: 0.3s background ease;
+	z-index: 1;
 	
 	&:hover{
 		background: #1BD9C4
@@ -73,6 +75,7 @@
 	font-weight: 500;
 	font-family: 'gilroylight';
 	letter-spacing: 0px;
+	z-index: 1;
 }
 	
 #postalCodeInput {	
@@ -86,11 +89,13 @@
 	border: 0.05em solid #979797;
 	border-radius: 21px;
 	padding: 0px 0px 0px 25px;
+	z-index: 1;
 }
 	
 .molecules {
 	pointer-events: none;
 	margin-top: -30%;
 	margin-bottom: 1.5%;
+	z-index: 0;
 }
 	
